--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,93 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./icomoon/style.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>resume</title>
 </head>
 <body>
-    
+    <div class="page-resume">
+        <div class="resume-summary">
+            <hearder class="summary-hd">
+                <img class="resume-avatar" src="http://coding.imweb.io/img/project/resume/avatar.png" alt="avatar">
+                <h1 class="resume-user">青蓝</h1>
+                <p class="resume-text">念经(coding)、参禅(thinking)、化缘(searching)</p>
+            </hearder>
+            <ul class="resume-info">
+                <li class="info-item">
+                    <i class="info-icon icon-mail2"></i>
+                    <p class="resume-mail">ycxu@imweb.io</p>
+                </li>
+                <li class="info-item">
+                    <i class="info-icon icon-phone"></i>
+                    <p class="resume-phone">15989012552</p>
+                </li>
+                <li class="info-item">
+                    <i class="info-icon icon-github"></i>
+                    <p class="resume-github">http://github.com/imweb</p>
+                </li>
+            </ul>
+            <footer class="summary-ft">
+                <div class="ft-column">
+                    <p class="ft-tt">学历：本科</p>
+                    <p class="ft-tt">毕业院校：青岛大学</p>      
+                </div>
+                <div class="ft-column">
+                    <p class="ft-tt">工作年限：4年</p>
+                    <p class="ft-tt">出生年月：1990年8月</p>
+            </div>
+            </footer>
+        </div>
+        <div class="resume-main">
+            <h2 class="resume-topic">工作经历</h2>
+            <ul class="work-list">
+                <li class="work-item">
+                    <h3 class="work-times">2014.08 — 至今</h3>
+                    <p class="work-company">腾讯科技(深圳)有限公司 / 产品策划</p>
+                    <p class="resume-desc">
+                        负责腾讯课堂的教研策划；能熟练对接用户及运营侧，规划版本。推进需求落地，并根据数据及用户反馈优化功能；所负责功能覆盖PC客户端、PCWeB、APP、H5。
+                    </p>
+                </li>
+                <li class="work-item">
+                    <h3 class="work-times">2013.07 — 2013.10</h3>
+                    <p class="work-company">腾讯科技深圳有限公司 / 产品实习生</p>
+                    <p class="resume-desc">
+                        QQ群商业化探索（在线教育方向）负责QQ群商业化探索，调研用户使用QQ群进行在线教育的情况，由于实习期间表现良好得以留用。调研结果帮助项目组决策，加大投入在线教育的资源，并在之后成立了腾讯课堂项目。
+                    </p>
+                </li>
+            </ul>
+            <h2 class="resume-topic">技能特长</h2>
+            <ul class="skill-list">
+                <li class="skill-item">
+                    <div class="skill-wrap">
+                        <h3 class="skill-topic">PS</h3>
+                        <span class="skill-degree">了解</span>
+                    </div>
+                    <p class="skill-desc">基础切图</p>
+                    <div class="skill-bar">
+                        <spn class="bar-percent"></spn>
+                    </div>
+                </li>
+                <li class="skill-item">
+                    <div class="skill-wrap">
+                        <h3 class="skill-topic">HTML & CSS</h3>
+                        <span class="skill-degree">精通</span>
+                    </div>
+                    <p class="skill-desc">语义化、CSS3、动画、响应式、移动端、预处理器...</p>
+                    <div class="skill-bar">
+                        <span class="bar-percent"></span>
+                    </div>
+                </li>
+                <li class="skill-item">
+                    <div class="skill-wrap">
+                        <h3 class="skill-topic">Javascript</h3>
+                        <span class="skill-degree">熟悉</span>
+                    </div>
+                    <p class="skill-desc">jquery、node、react、vue、webpack...</p>
+                    <div class="skill-bar">
+                        <spn class="bar-percent"></spn>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
